# nbmpc

./: CMakeLists.txt  README.md
.ipynb_checkpoints/: CMakeLists-checkpoint.txt
src/: config.h  main.c  mpc.c
src/.ipynb_checkpoints/: main-checkpoint.c
